k8s/datasets/datasets-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datasets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datasets
  template:
    metadata:
      labels:
        app: datasets
    spec:
      containers:
        - name: nginx
          image: ghcr.io/netwerk-digitaal-erfgoed/datasets-nginx
          ports:
            - containerPort: 80
        - name: php
          image: ghcr.io/netwerk-digitaal-erfgoed/datasets-php
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: ghcr
