k8s/datasets/datasets-service.yml
apiVersion: v1
kind: Service
metadata:
  name: datasets
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: php-fpm
      port: 9000
      targetPort: 9000
  selector:
    app: datasets
